--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<title>测试</title>
 </head>
 <style type="text/css">
-	p{
-		color: red;
+	
+p{
+		color: yellow;
+		width: 200px;
+		height: 200px;
 		font-size: 20px;
 		display: block;
 		margin: auto;
